--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,26 @@
 body{ font-family: 'Montserrat', sans-serif}
-
 input,
 textarea{
     border-width: 0 0 1px;
     border-color:grey;
     outline:0
 }
-
 #success-message{
-    color:green;
-    font-size:20px;
-    margin-top:20px;
+    font-size:1.5rem;
+    margin-top:0.5rem;
     display:none
 }
-
 #error{
     color:black;
-    padding:2rem;
+    padding:1rem;
     background-color:red;
     font-weight: bold;
     display:none
-
 }
-
-button[type='submit']{
-    border-radius:65px;
-    padding:5px 25px
+.btn-danger{
+    border-radius:4rem;
+    padding:0.5rem 2rem;
+    border:none
 }
+.btn-danger:hover{ cursor:pointer }
+.btn-danger:focus{ outline:none }
